--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -59,109 +59,154 @@
         android:layout_below="@+id/toolbar"
         android:orientation="vertical">
 
-        <TextView
+        <RelativeLayout
+            android:id="@+id/ll_sms"
             android:layout_width="match_parent"
-            android:layout_height="37dp"
-            android:textSize="14dp"
-            android:text="서비스이용, 알림 설정"
-            android:textColor="@color/purple"
-            android:background="@color/back_line"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
-            android:gravity="center_vertical" />
+            android:layout_height="52dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:gravity="center">
+
+            <TextView
+                android:id="@+id/tv_sms"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="SMS"
+                android:textSize="15dp"
+                android:textColor="@color/select_setting_txt" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_alignParentRight="true"
+                android:gravity="center|center_horizontal">
+
+                <CheckBox
+                    android:id="@+id/accept_sms"
+                    android:layout_width="50dp"
+                    android:layout_height="26dp"
+                    android:button="@null"
+                    android:clickable="true"
+                    android:background="@drawable/push_checkbox_icon"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true" />
+
+            </LinearLayout>
+        </RelativeLayout>
+
+        <View
+            android:id="@+id/v_sms"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/back_line" />
+
+        <RelativeLayout
+            android:id="@+id/ll_email"
+            android:layout_width="match_parent"
+            android:layout_height="52dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:gravity="center">
+
+            <TextView
+                android:id="@+id/tv_email"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="e-mail"
+                android:textSize="15dp"
+                android:textColor="@color/select_setting_txt" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_alignParentRight="true"
+                android:gravity="center|center_horizontal">
+
+                <CheckBox
+                    android:id="@+id/accept_email"
+                    android:layout_width="50dp"
+                    android:layout_height="26dp"
+                    android:button="@null"
+                    android:clickable="true"
+                    android:background="@drawable/push_checkbox_icon"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true" />
+
+            </LinearLayout>
+        </RelativeLayout>
+
+        <View
+            android:id="@+id/v_email"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/back_line" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="52dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:gravity="center">
+
+            <TextView
+                android:id="@+id/tv_push"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="PUSH"
+                android:textSize="15dp"
+                android:textColor="@color/select_setting_txt" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_alignParentRight="true"
+                android:gravity="center|center_horizontal">
+
+                <CheckBox
+                    android:id="@+id/accept_push"
+                    android:layout_width="50dp"
+                    android:layout_height="26dp"
+                    android:button="@null"
+                    android:clickable="true"
+                    android:background="@drawable/push_checkbox_icon"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true" />
+
+            </LinearLayout>
+        </RelativeLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/back_line" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginRight="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="13dp"
+                android:textColor="@color/termtext"
+                android:text="※ 개인 정보 수집 이용 동의 및 할인 혜택 알림 수신에 동의하시고 누구보다 빠르게 최대 80% 혜택을 받으세요!" />
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/back_line" />
 
         <RelativeLayout
             android:id="@+id/btn_push"
-            android:layout_width="match_parent"
-            android:layout_height="52dp"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp">
-
-            <!-- 푸시 -->
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:textSize="15dp"
-                android:textColor="@color/blacktxt"
-                android:text="할인 혜택 알림 받기(Push)" />
-
-            <ImageView
-                android:layout_width="12dp"
-                android:layout_height="12dp"
-                android:background="@drawable/ico_my_more"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true" />
-
-        </RelativeLayout>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/back_line" />
-
-        <RelativeLayout
-            android:id="@+id/btn_agree1"
-            android:layout_width="match_parent"
-            android:layout_height="52dp"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp">
-
-            <!-- 개인 정보 수집 및 이용 (선택) -->
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:textSize="15dp"
-                android:textColor="@color/blacktxt"
-                android:text="@string/setting_agree1" />
-
-            <ImageView
-                android:layout_width="12dp"
-                android:layout_height="12dp"
-                android:background="@drawable/ico_my_more"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true" />
-
-        </RelativeLayout>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/back_line" />
-
-        <RelativeLayout
-            android:id="@+id/btn_agree2"
-            android:layout_width="match_parent"
-            android:layout_height="52dp"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp">
-
-            <!-- 위치 서비스 이용 (선택) -->
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:textSize="15dp"
-                android:textColor="@color/blacktxt"
-                android:text="@string/setting_agree2" />
-
-            <ImageView
-                android:layout_width="12dp"
-                android:layout_height="12dp"
-                android:background="@drawable/ico_my_more"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true" />
-
-        </RelativeLayout>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/back_line" />
-
-        <RelativeLayout
-            android:id="@+id/btn_retire"
             android:layout_width="match_parent"
             android:layout_height="52dp">
 
@@ -173,6 +218,7 @@
             <!-- 회원탈퇴 -->
 
             <TextView
+                android:id="@+id/txt_push"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_centerVertical="true"
@@ -181,7 +227,7 @@
                 android:gravity="center"
                 android:textSize="15dp"
                 android:textColor="@color/blacktxt"
-                android:text="@string/retire_txt1" />
+                android:text="앱 푸시 설정" />
 
             <ImageView
                 android:layout_width="12dp"
@@ -193,11 +239,20 @@
 
         </RelativeLayout>
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_below="@id/txt_push"
+            android:text="앱 설정 페이지 이동\n앱 푸시 설정에서 '사용 안함'으로 설정하시면, 모든 호텔나우 소식 및 할인 혜택 정보를 받으실 수 없으니 '사용함'으로 설정해주세요."/>
+
         <View
-            android:id="@+id/retire_line"
             android:layout_width="match_parent"
             android:layout_height="1dp"
+            android:layout_marginTop="15dp"
             android:background="@color/back_line" />
+
     </LinearLayout>
 
     <RelativeLayout
