--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -43,7 +43,7 @@
                 android:layout_toRightOf="@id/title_back"
                 android:textColor="@color/purple"
                 android:textSize="16dp"
-                android:text="설정하기" />
+                android:text="할인 혜택 알림 받기" />
 
             <View
                 android:layout_width="match_parent"
@@ -205,10 +205,11 @@
             android:layout_height="1dp"
             android:background="@color/back_line" />
 
-        <RelativeLayout
+        <LinearLayout
             android:id="@+id/btn_push"
             android:layout_width="match_parent"
-            android:layout_height="52dp">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
             <View
                 android:id="@+id/line"
@@ -216,42 +217,44 @@
                 android:layout_height="6dp"
                 android:background="@color/back_line"/>
             <!-- 회원탈퇴 -->
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="52dp">
+                <TextView
+                    android:id="@+id/txt_push"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="20dp"
+                    android:gravity="center"
+                    android:textSize="15dp"
+                    android:textColor="@color/blacktxt"
+                    android:text="앱 푸시 설정" />
+
+                <ImageView
+                    android:layout_width="12dp"
+                    android:layout_height="12dp"
+                    android:layout_marginRight="20dp"
+                    android:background="@drawable/ico_my_more"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true" />
+            </RelativeLayout>
 
             <TextView
-                android:id="@+id/txt_push"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_centerVertical="true"
-                android:layout_below="@id/line"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
-                android:gravity="center"
-                android:textSize="15dp"
-                android:textColor="@color/blacktxt"
-                android:text="앱 푸시 설정" />
-
-            <ImageView
-                android:layout_width="12dp"
-                android:layout_height="12dp"
                 android:layout_marginRight="20dp"
-                android:background="@drawable/ico_my_more"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true" />
+                android:layout_below="@id/txt_push"
+                android:text="앱 설정 페이지 이동\n앱 푸시 설정에서 '사용 안함'으로 설정하시면, 모든 호텔나우 소식 및 할인 혜택 정보를 받으실 수 없으니 '사용함'으로 설정해주세요."/>
 
-        </RelativeLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="15dp"
+                android:background="@color/back_line" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_below="@id/txt_push"
-            android:text="앱 설정 페이지 이동\n앱 푸시 설정에서 '사용 안함'으로 설정하시면, 모든 호텔나우 소식 및 할인 혜택 정보를 받으실 수 없으니 '사용함'으로 설정해주세요."/>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginTop="15dp"
-            android:background="@color/back_line" />
+        </LinearLayout>
 
     </LinearLayout>
 
