--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -52,6 +52,11 @@
                     android:id="@+id/join"
                     layout="@layout/layout_mypage_join" />
 
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="75dp"
+                    android:background="@drawable/btn_screenup"/>
+
                 <include
                     android:id="@+id/center"
                     layout="@layout/layout_mypage_center" />
