필터, 내주변 보기, 마이페이지, 베너 완료

--- a/app/src/main/res/layout/dialog_agree_all.xml
+++ b/app/src/main/res/layout/dialog_agree_all.xml
@@ -58,7 +58,7 @@
                     android:layout_height="50dp"
                     android:layout_weight=".5"
                     android:gravity="center"
-                    android:text="@string/alert_confrim"
+                    android:text="시작"
                     android:textColor="@color/white"
                     android:textSize="15dp"
                     android:background="@drawable/gray_round"
