약관동의 문구 변경, 베너 이미지 사이즈 변경,  알림 설정시 약관동의 팝업 매번뜨던것 변경, 회원가입 화면에서 가입 실패시 progress gone

--- a/app/src/main/res/layout/activity_agree.xml
+++ b/app/src/main/res/layout/activity_agree.xml
@@ -71,7 +71,7 @@
                 android:id="@+id/tv_location"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/setting_agree2"
+                android:text="@string/setting_agree2_sub"
                 android:textSize="15dp"
                 android:textColor="@color/blacktxt" />
 
