--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -70,8 +70,9 @@
                     <ImageView
                         android:id="@+id/my_banner"
                         android:layout_width="match_parent"
-                        android:layout_height="75dp"
+                        android:layout_height="wrap_content"
                         android:visibility="visible"
+                        android:adjustViewBounds="true"
                         android:scaleType="fitXY"/>
                 </LinearLayout>
 
