--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -105,6 +105,7 @@
 
             <!-- 푸시 -->
             <TextView
+                android:id="@+id/tv_alarm_setting"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
