--- a/app/src/main/res/layout/dialog_agree_user.xml
+++ b/app/src/main/res/layout/dialog_agree_user.xml
@@ -128,7 +128,7 @@
                     android:lineSpacingExtra="10dp"
                     android:gravity="center_horizontal"
                     android:layout_below="@id/webview"
-                    android:text="할인, 혜택 정보는 개인정보 수집 및 이용(선택) 항목에 동의하셔야 받을 수 있습니다." />
+                    android:text="개인 정보 수집 이용 동의에 동의하시고, 호텔나우의 특가, 이벤트, 할인쿠폰 정보를 받아보세요!" />
 
                 <RelativeLayout
                     android:id="@+id/layout_message"
@@ -146,7 +146,7 @@
                         android:gravity="center"
                         android:layout_marginLeft="31dp"
                         android:layout_marginRight="29dp"
-                        android:text=" ※  &apos;개인 정보 수집 및 이용&apos;에 동의하지 않으시면 할인 혜택 소식 받기를 설정하여도 관련 소식을 전해드릴 수 없습니다.\n 개인 정보 수집 및 이용과 할인 혜택 소식 받기를 모두 ‘동의’로 설정해주세요." />
+                        android:text=" ※ '개인 정보 수집 및 이용'에 동의하지 않으시면, '할인 혜택 알림 받기'를 동의하여도 관련 소식을 전해드릴 수 없습니다.\n 모든 항목에 '동의'로 설정해주세요." />
                 </RelativeLayout>
             </RelativeLayout>
         </ScrollView>
