약관동의 팝업 확인 progress 적용, 알림 off 시 알림 설정 팝업 추가, 개인정보 동의팝업 터치 영역 늘림 및 문구변경

--- a/app/src/main/res/layout/activity_reservation.xml
+++ b/app/src/main/res/layout/activity_reservation.xml
@@ -137,10 +137,10 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
-                android:background="@color/bg_background" />
+                android:background="@color/back_line" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -172,7 +172,7 @@
                     android:gravity="center"
                     android:text="@string/caution_agreement_view"
                     android:textSize="12dp"
-                    android:textColor="@color/graytxt" />
+                    android:textColor="@color/purple" />
             </RelativeLayout>
 
             <LinearLayout
