--- a/app/src/main/res/layout/dialog_full.xml
+++ b/app/src/main/res/layout/dialog_full.xml
@@ -15,7 +15,7 @@
             android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/title"
+                android:id="@+id/title_main"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="24dp"
@@ -56,7 +56,7 @@
                 android:layout_height="match_parent"
                 android:scrollbars="none"
                 android:fillViewport="true"
-                android:layout_below="@id/title"
+                android:layout_below="@id/title_main"
                 android:layout_above="@id/btn_ok"
                 android:overScrollMode="never">
 
